Added slider for headers

--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
     </div>
 
     <div id="main-body">
+        <div class="text-center headers">
+            <h1 class="header" id="About"> About </h1>
+            <h1 class="header" id="Images"> Images </h1>
+            <h1 class="header" id="Reservations"> Reservations </h1>
+            <hr />
+        </div>
+
     A bunch of text <br><br>
     A bunch of text <br><br>
     A bunch of text <br><br>
