Minimum viable product done
It's missing content but the outline is there.

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <div class="navbar-text">
               
               <ul class="navbar-nav list-inline">
-                  <li><a href="#" id="select-en">EN</a></li>
-                  <li><a href="#" id="select-fr">FR</a></li>
-                  <li><a href="#" id="select-ro">RO</a></li>
+                  <li><a href="#" id="ENG-select">EN</a></li>
+                  <li><a href="#" id="FR-select">FR</a></li>
+                  <li><a href="#" id="RO-select">RO</a></li>
               </ul>
 
             </div>
@@ -47,29 +47,29 @@
 
     <div class="jumbotron">
         
-        <h1 class="text-center"> Chalet </h1>
+        <h1 class="text-center" id="main-title"> Chalet </h1>
         <div class="info">
         </div>
     </div>
 
     <div id="main-body">
         <div class="text-center headers">
-            <h1 class="header About"> About </h1>
-            <h1 class="header Images"> Images </h1>
-            <h1 class="header Reservations"> Reservations </h1>
+            <h1 class="header About" id="AboutTitle"> About </h1>
+            <h1 class="header Images" id="ImagesTitle"> Images </h1>
+            <h1 class="header Reservations" id="ReservationsTitle"> Reservations </h1>
             <hr id="slider" />
         </div>
 
         <div class="content text-center" id="AboutContent">
-            Blablabla a bunch of text
+            <p id="AboutText">Blablabla a bunch of text</p>
         </div>
 
         <div class="content text-center" id="ImagesContent">
-            Some slideshow of images
+            <p id="ImagesText">Some slideshow of images</p>
         </div>
 
         <div class="content text-center" id="ReservationsContent">
-            Some calendar
+            <p id="AboutText">Some calendar/platform to pay</p>
         </div>
         </div>
     </div><!--/#main-body-->
@@ -82,6 +82,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="js/navbar-scroll.js"></script>
     <script src="js/button-scroll.js"></script>
+    <script src="js/langwriter.js"></script>
 
 </body>
 
