--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
 
         <div class="content text-center" id="ReservationsContent">
-            <p id="AboutText">Some calendar/platform to pay</p>
+            <p id="ReservationsText">Some calendar/platform to pay</p>
         </div>
         </div>
     </div><!--/#main-body-->
