--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <div class="jumbotron">
         
-        <h1 class="text-center" id="main-title"> Chalet </h1>
+        <h1 class="text-center" id="main-title"> Château Beau Soleil </h1>
         <div class="info">
         </div>
     </div>
