--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <!--Stylesheets-->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="stylesheets/stylesheet.css" rel="stylesheet"/>
+
+    <!-- Title -->
+    <title>Château Beau Soleil</title>
 </head>
 
 <body>
@@ -71,25 +74,25 @@
 
         <div class="content text-center" id="ImagesContent">
             <div id="slideshow-box">
-                <img class="slideshow img-responsive" src="images/slide-1.jpg">
-                <img class="slideshow img-responsive" src="images/slide-2.jpg">
-                <img class="slideshow img-responsive" src="images/slide-3.jpg">
-                <img class="slideshow img-responsive" src="images/slide-4.jpg">
-                <img class="slideshow img-responsive" src="images/slide-5.jpg">
-                <img class="slideshow img-responsive" src="images/slide-6.jpg">
-                <img class="slideshow img-responsive" src="images/slide-7.jpg">
-                <img class="slideshow img-responsive" src="images/slide-8.jpg">
-                <img class="slideshow img-responsive" src="images/slide-9.jpg">
-                <img class="slideshow img-responsive" src="images/slide-10.jpg">
-                <img class="slideshow img-responsive" src="images/slide-11.jpg">
-                <img class="slideshow img-responsive" src="images/slide-12.jpg">
-                <img class="slideshow img-responsive" src="images/slide-13.jpg">
-                <img class="slideshow img-responsive" src="images/slide-14.jpg">
-                <img class="slideshow img-responsive" src="images/slide-15.jpg">
-                <img class="slideshow img-responsive" src="images/slide-16.jpg">
-                <img class="slideshow img-responsive" src="images/slide-17.jpg">
-                <img class="slideshow img-responsive" src="images/slide-18.jpg">
-                <img class="slideshow img-responsive" src="images/slide-19.jpg">
+                <img class="slideshow img-responsive" alt="chalet" src="images/slide-1.jpg">
+                <img class="slideshow img-responsive" alt="chateau beau soleil" src="images/slide-2.jpg">
+                <img class="slideshow img-responsive" alt="chateau beau soleil" src="images/slide-3.jpg">
+                <img class="slideshow img-responsive" alt="chalet" src="images/slide-4.jpg">
+                <img class="slideshow img-responsive" alt="chalet" src="images/slide-5.jpg">
+                <img class="slideshow img-responsive" alt="chalet" src="images/slide-6.jpg">
+                <img class="slideshow img-responsive" alt="chalet" src="images/slide-7.jpg">
+                <img class="slideshow img-responsive" alt="chalet" src="images/slide-8.jpg">
+                <img class="slideshow img-responsive" alt="chalet" src="images/slide-9.jpg">
+                <img class="slideshow img-responsive" alt="chalet" src="images/slide-10.jpg">
+                <img class="slideshow img-responsive" alt="chalet" src="images/slide-11.jpg">
+                <img class="slideshow img-responsive" alt="chalet" src="images/slide-12.jpg">
+                <img class="slideshow img-responsive" alt="chalet" src="images/slide-13.jpg">
+                <img class="slideshow img-responsive" alt="chalet" src="images/slide-14.jpg">
+                <img class="slideshow img-responsive" alt="chalet" src="images/slide-15.jpg">
+                <img class="slideshow img-responsive" alt="chalet" src="images/slide-16.jpg">
+                <img class="slideshow img-responsive" alt="chalet" src="images/slide-17.jpg">
+                <img class="slideshow img-responsive" alt="chalet" src="images/slide-18.jpg">
+                <img class="slideshow img-responsive" alt="chalet" src="images/slide-19.jpg">
             </div>
             <button class="slide-buttons" onclick="changeImage(-1)">&#10094;</button>
             <button class="slide-buttons" onclick="changeImage(+1)">&#10095;</button>             
