Update description, pricing, info
The descriptions were outdated, as was the pricing. The establishment
number must also be included as it is a provincial policy.

--- a/index.html
+++ b/index.html
@@ -61,17 +61,25 @@
         <div class="header-background">
             <h1 id="AboutTitle" class="header"> About </h1>
         </div>
+
         <div class="content" id="AboutContent">
-          <p id="AboutText">Beautiful chalet in the Mont-Tremblant area for rent ! The chalet includes:</p>
+          <p id="AboutText0">The Château Beau-Soleil is the perfect location for a pleasant vacation, whether it's a week-long escapade or a relaxing week-end.</p>
+          <p id="AboutText1">Located near Mont-Tremblant and the Archambeault Falls, this chalet is also near the federal snowbike trails. There are numerous service points located a 10-minuted drive away, as well as a few restaurants and the Kanata Aki center.</p>
+          <p id="AboutText2">On a large terrain of 20 acres, with a bit of luck, you may even cross paths with wild animals such as otters, deers or foxes.</p>
+          <p id="AboutText3">We also offer a jacuzzi and a barrel sauna, but we're counting on you to bring the mimosas!</p>
+          <p id="AboutText4">Welcome!</p>
+          <hr/>
+          <p id="AboutText5">The chalet includes:</p>
           <ul>
-            <li id="includes1">4 big recently renovated rooms, in excellent condition</li>
-            <li id="includes2">5 beds : 4 Queen and 1 double</li>
-            <li id="includes3">A sofa bed fitting two</li>
-            <li id="includes4">A restroom and a bathroom</li>
-            <li id="includes5">A terrain with 2 ponds and 20 acres of forest for strolls</li>
+            <li id="includes0">4 big recently renovated rooms, in excellent condition</li>
+            <li id="includes1">5 beds : 4 Queen and 1 double</li>
+            <li id="includes2">A sofa bed fitting two</li>
+            <li id="includes3">A restroom and a bathroom</li>
+            <li id="includes4">A terrain with 2 ponds and 20 acres of forest for strolls</li>
           </ul>
-          <p id="PleaseNote">PLEASE NOTE: To maintain the great condition of the chalet, it is non-smoking and no animals inside the chalet. Also, please abstain from irresponsible partying.</p>
+          <p id="PleaseNote">PLEASE NOTE: To maintain the great condition of the chalet, please note that it is non-smoking and no animals inside the chalet. Also, please abstain from irresponsible partying.</p>
           <p id="ThankYou">Thank you!</p>
+          <p id="establishment" class="text-center">Establishment Number: 296263</p>
         </div>
         <div class="header-background">
             <h1 id="ImagesTitle" class="header"> Images </h1>
@@ -105,13 +113,13 @@
             <h1 id="ReservationsTitle" class="header"> Reservations </h1>
         </div>
         <div class="content" id="ReservationsContent">
-            <p id="ReservationSpec">Contact us to rent it for the low price of $125 per week day, and $300 per week-end day!</p>
+            <p id="ReservationSpec">Contact us to rent it for the low price of $1200 per week and $650 per week-end.</p>
             <p><span id="ReservationText">To make a reservation, please contact Romeo: </span><a href="mailto:romeo_horvath@yahoo.ca">romeo_horvath@yahoo.ca</a></p>
             <ul class="Restrictions">
-                <li id="restrictions1">Please be sure to include your full name</li>
-                <li id="restrictions2">Please include the start and end dates for your reservation</li>
-                <li id="restrictions3">The reservation may be for up to 8 people</li>
-                <li id="restrictions4">The reservation must be for at least 3 nights</li>
+                <li id="restrictions0">Please be sure to include your full name</li>
+                <li id="restrictions1">Please include the start and end dates for your reservation</li>
+                <li id="restrictions2">The reservation may be for up to 8 people</li>
+                <li id="restrictions3">The reservation must be for at least 3 nights</li>
             </ul>
         </div>
     </div><!--/#main-body-->
