Minor fix to English

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         <div class="content" id="AboutContent">
           <p id="AboutText0">The Château Beau-Soleil is the perfect location for a pleasant vacation, whether it's a week-long escapade or a relaxing week-end.</p>
-          <p id="AboutText1">Located near Mont-Tremblant and the Archambeault Falls, this chalet is also near the federal snowbike trails. There are numerous service points located a 10-minuted drive away, as well as a few restaurants and the Kanata Aki center.</p>
+          <p id="AboutText1">Located near Mont-Tremblant and the Archambeault Falls, this chalet is also near the federal snowbike trails. There are numerous service points located only a 10-minute drive away, as well as a few restaurants and the Kanata Aki center.</p>
           <p id="AboutText2">On a large terrain of 20 acres, with a bit of luck, you may even cross paths with wild animals such as otters, deers or foxes.</p>
           <p id="AboutText3">We also offer a jacuzzi and a barrel sauna, but we're counting on you to bring the mimosas!</p>
           <p id="AboutText4">Welcome!</p>
