--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <!--Stylesheets-->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="stylesheets/fonts/Pontano_Sans/PontanoSans-Regular.ttf" rel="stylesheet">
     <link href="stylesheets/stylesheet.css" rel="stylesheet"/>
 
     <!-- Title -->
@@ -52,9 +53,7 @@
     </nav>
 
     <div class="jumbotron">
-        <h1 class="text-center" id="main-title"> Château Beau Soleil </h1>
-        <div class="info">
-        </div>
+        <h1 class="text-center" id="main-title"> Château<br>Beau Soleil </h1>
     </div>
 
     <div id="main-body">
